# InterfaceAutoTest

./: .gitignore  README.md  a_test_case.py  api.py  extract.yaml  id.yaml  luffy.py  main.py  pyproject.toml  pytest.ini  session.py
TestCases/: test_1_user.json  test_1_user.yaml  test_2_url.yaml  test_3_sql.yaml
TestCases/answer/: test_1_status.yaml
commons/: __init__.py  cases.py  databases.py  exchange.py  files.py  funcs.py  models.py  session.py  settings.py  templates.py
commons/file_processors/: __init__.py  base.py  file_handle.py  json_processor.py  yaml_processor.py
utils/: case_parser.py  case_validator.py  data_driver.py  header_transition.py
